--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
+pillow==11.2.1
 platformdirs==4.3.7
 psycopg2-binary==2.9.10
 pycodestyle==2.13.0
