CD prod update settings update README.md update all docker files

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ hotfix
 # IDEs
 .idea
 .vscode
-
+**/static/
 # Below is a copy of https://github.com/github/gitignore/blob/HEAD/Node.gitignore
 
 # Logs
