--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,6 @@ black==25.1.0
 click==8.1.8
 distlib==0.3.9
 Django==5.2
-django-cors-headers==4.7.0
 django-filter==25.1
 django-jazzmin==3.0.1
 django-rest-framework==0.1.0
@@ -44,3 +43,4 @@ django-filter
 django-cors-headers>=4.7.0
 python-slugify>=8.0.4
 text-unidecode>=1.3
+gunicorn
