--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,70 +1,55 @@
+version: "3.9"
+
 services:
-    backend:
-        container_name: backend
-        build:
-            context: ./backend
-            dockerfile: dockerfile.prod
-        volumes:
-            - ./backend:/backend
-        expose:
-            - 8000
-        env_file: ./.env
-        environment:
-            - BACKEND_SERVER=${VITE_BACKEND_URL}
-            - BACKEND_PREFIX=${BACKEND_PREFIX}
-            - DEBUG=${DJANGO_DEBUG:?Variable DJANGO_DEBUG required}
-            - SECRET_KEY=${SECRET_KEY}
-            - DB_NAME=${DB_NAME}
-            - DB_USER=${DB_USER}
-            - DB_PASSWORD=${DB_PASSWORD}
-            - DB_HOST=${DB_HOST}
-            - DB_PORT=${DB_PORT}
-            - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
-        depends_on:
-            - db
-        command: sh ./run-server.prod.sh
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    volumes:
+      - ./backend/static:/app/static
+      - /var/www/lezgian_media:/app/media
+    expose:
+      - "8000"
+    environment:
+      - DEBUG=0
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
+    depends_on:
+      - db
 
-    db:
-        container_name: postgres-db
-        image: postgres:15-alpine
-        restart: always
-        volumes: 
-            - db-data:/var/lib/postgresql/data
-        env_file: ./.env
-        environment:
-            - POSTGRES_DB=${DB_NAME}
-            - POSTGRES_USER=${DB_USER}
-            - POSTGRES_PASSWORD=${DB_PASSWORD}
-        expose:
-            - 5433
-        healthcheck:
-            test: ["CMD", "-f", "http://localhost:5433"]
+  db:
+    image: postgres:15
+    restart: always
+    env_file:
+      - .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
-    nginx: 
-        container_name: nginx-server
-        build:
-            context: ./frontend
-            dockerfile: dockerfile.prod
-            args:
-                - BACKEND_URL=${VITE_BACKEND_URL}
-        restart: unless-stopped
-        env_file: ./.env
-        environment:
-            - VITE_BACKEND_URL=${VITE_BACKEND_URL}
-            - HUSKY=0
-            - NODE_ENV=production
-        volumes:
-            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-            # Created by certbot in server
-            - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
-            - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
-        depends_on: 
-            - backend
-        ports:
-            - 443:443
-            - 80:80
-        command: ["nginx", "-g", "daemon off;"]
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /var/www/lezgian_media:/app/media
+      - ./backend/static:/app/static
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
 
-volumes: 
-    db-data:
-        name: cs-lineups-db
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+
+volumes:
+  postgres_data:
