--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,42 +1,59 @@
-server {
+events {}
+
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
+
+  upstream django {
+    server backend:8000;
+  }
+
+  upstream next {
+    server frontend:3000;
+  }
+
+  server {
     listen 80;
-    server_name cs-lineups.ru;
-    return 301 https://cs-lineups.ru$request_uri;
-}
 
-server {
-    listen [::]:443 ssl;
-    listen 443 ssl; 
-    
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-
-    server_name cs-lineups.ru;
-
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
-    error_page 404 /index.html;
-
-    location / { 
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+    # Прокси для админки Django
+    location /admin/ {
+      proxy_pass http://django;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /development/api/ {
-        proxy_pass http://backend:8000/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Прокси для API запросов к Django
+    location /api/ {
+      proxy_pass http://django;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /development/swagger/ {
-        proxy_pass http://info-service:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Прокси для статики Django
+    location /static/ {
+      alias /app/static/;
     }
+
+    location /media/ {
+      alias /app/media/;
+    }
+
+    # Прокси для Next.js
+    location / {
+      proxy_pass http://next;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Прокси для Next.js статических файлов
+    location /_next/ {
+      proxy_pass http://next;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+  }
 }
