--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ black==25.1.0
 click==8.1.8
 distlib==0.3.9
 Django==5.2
+django-cors-headers==4.7.0
 django-filter==25.1
 django-jazzmin==3.0.1
 django-rest-framework==0.1.0
@@ -11,6 +12,7 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 dotenv==0.9.9
 drf-spectacular==0.28.0
+Faker==37.1.0
 filelock==3.18.0
 flake8==7.2.0
 inflection==0.5.1
@@ -35,12 +37,7 @@ simplejwt==2.0.1
 slugify==0.0.1
 sqlparse==0.5.3
 typing==3.7.4.3
+tzdata==2025.2
 Unidecode==1.3.8
 uritemplate==4.1.1
 virtualenv==20.30.0
-django-jazzmin>=2.6.0
-django-filter
-django-cors-headers>=4.7.0
-python-slugify>=8.0.4
-text-unidecode>=1.3
-gunicorn
