--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,24 +16,33 @@
     },
     "dependencies": {
         "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
+        "@radix-ui/react-dialog": "^1.1.10",
+        "@radix-ui/react-slot": "^1.2.0",
         "@reduxjs/toolkit": "^2.5.0",
+        "@tailwindcss/vite": "^4.1.4",
         "@tanstack/react-query": "^5.67.1",
         "@tanstack/react-query-devtools": "^5.71.3",
         "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.8.1",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "dotenv": "^16.4.7",
+        "lucide-react": "^0.501.0",
         "path": "^0.12.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.2.0",
         "react-router-dom": "^6.26.2",
         "sonner": "^2.0.1",
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss": "^4.1.4",
+        "tw-animate-css": "^1.2.6",
+        "use-debounce": "^10.0.4",
         "vite": "^6.2.4",
         "zod": "^3.24.1"
     },
     "devDependencies": {
-        "@types/node": "^22.13.9",
+        "@types/node": "^22.14.1",
         "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.1",
         "eslint-config-prettier": "^9.1.0",
