--- a/.github/workflows/auto-deploy.yaml
+++ b/.github/workflows/auto-deploy.yaml
@@ -9,11 +9,9 @@ jobs:
   deploy:
     name: Деплой
     runs-on: ubuntu-latest
-
     steps:
       - name: Клон репы
         uses: actions/checkout@v3
-
       - name: SSH
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -25,8 +23,9 @@ jobs:
               cd /root
               git clone https://Topando:${{ secrets.GH_DEPLOY_TOKEN }}@github.com/MISIS-Monke-Club/monke-club.git
             fi
-
+            
             cd /root/monke-club
+            git config pull.rebase false
             git pull origin develop
             docker-compose -f docker-compose.prod.yaml pull
             docker-compose -f docker-compose.prod.yaml up -d --build
