--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build:
@@ -9,7 +7,7 @@ services:
       - .env
     volumes:
       - ./backend/static:/app/static
-      - /var/www/lezgian_media:/app/media
+      - /var/www/monckeclub:/app/media
     expose:
       - "8000"
     environment:
@@ -17,6 +15,8 @@ services:
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     depends_on:
       - db
+    networks:
+      - app-network
 
   db:
     image: postgres:15
@@ -27,29 +27,52 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /var/www/lezgian_media:/app/media
-      - ./backend/static:/app/static
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
+    networks:
+      - app-network
 
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: dockerfile.prod
     volumes:
       - ./frontend:/app
       - /app/node_modules
     ports:
-      - "3000:3000"
+      - "5173:5173"
+    env_file:
+      - .env
     environment:
       - NODE_ENV=development
+    networks:
+      - app-network
+
+  nginx:
+        container_name: nginx-server
+        build:
+            context: ./frontend
+            dockerfile: dockerfile.prod
+            args:
+                - BACKEND_URL=${VITE_BACKEND_URL}
+        restart: unless-stopped
+        env_file: ./.env
+        environment:
+            - VITE_BACKEND_URL=${VITE_BACKEND_URL}
+            - HUSKY=0
+            - NODE_ENV=production
+        volumes:
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+            - /var/www/monckeclub:/app/media
+            - ./backend/static:/app/static
+        depends_on:
+            - backend
+        ports:
+            - 80:80
+        networks:
+          - app-network
 
 volumes:
   postgres_data:
+
+
+networks:
+  app-network:
