--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build:
@@ -10,7 +8,7 @@ services:
     volumes:
       - ./backend:/app
     ports:
-      - "8000:8000"
+      - "3000:8000"
     environment:
       - DEBUG=1
     command: python manage.py runserver 0.0.0.0:8000
@@ -19,27 +17,30 @@ services:
       - db
 
   frontend:
+      container_name: frontend
       build:
-        context: ./frontend
-        dockerfile: Dockerfile
-      ports:
-        - "3000:3000"
+          context: ./frontend
+          dockerfile: dockerfile.dev
+          args:
+              - MODE=${MODE}
       volumes:
-        - ./frontend:/app
-        - /app/node_modules
+          - ./frontend:/frontend
+          - ./frontend/node_modules:/frontend/node_modules
+      env_file: ./.env
       environment:
-        - NODE_ENV=development
+          - VITE_BACKEND_URL=${VITE_BACKEND_URL}
+          - HUSKY=${FRONTEND_LINTING:?Variable FRONTEND_LINTING is required}
+          - NODE_ENV=${MODE:?Variable Mode is required}
+      ports:
+          - 8000:5173
       depends_on:
-        - backend
+          - backend
+      command: sh ./run-server.sh
   db:
     image: postgres:15
     restart: always
     env_file:
       - .env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-volumes:
-  postgres_data:
 
