--- a/frontend/dockerfile.prod
+++ b/frontend/dockerfile.prod
@@ -1,12 +1,25 @@
-FROM node:22
+# Сборка фронтенда
+FROM node:20 AS builder
 
-WORKDIR /app
-COPY package*.json .
+ARG BACKEND_URL
+ENV VITE_BACKEND_URL=$BACKEND_URL
+ENV NODE_ENV production
+ENV HUSKY=0
 
+WORKDIR /frontend
+
+COPY package.json ./
+COPY package-lock.json ./
 RUN npm install
 
-COPY . .
+COPY . ./
+RUN npm run build
 
-EXPOSE 8080
+# Продакшн сервер Nginx
+FROM nginx:stable-alpine3.20-perl AS deploy
 
-CMD [ "npm", "run", "host"]
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /frontend/dist/ /usr/share/nginx/html/
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
